# ColdVoxExperiment

./: .gitignore  README.md  benchmark.py  diag_imports.py  download_models_now.py  pyproject.toml  requirements.txt
data/: manifest.json
docs/: README.md  northstar.md
docs/dev/: testing.md
docs/models/distil-whisper/: README.md
docs/models/granite/: README.md
docs/models/moonshine/: README.md
docs/models/phi4/: README.md
docs/models/voxtral/: README.md
docs/models/whisper/: README.md
docs/plans/: architecture.md  environment_verification_report.md  implementation-plan.md  model_insights_deep_dive.md
harness/: metrics.py  runner.py
harness/models/: base.py  distil_whisper_wrapper.py  moonshine_wrapper.py
tests/: conftest.py  test_base.py
