[project]
name = "coldvox-experiment"
version = "0.1.0"
description = "Local ASR Benchmark for AMD Strix Halo"
requires-python = ">=3.10"
dependencies = [
    "torch",
    "torchaudio",
    "transformers>=4.52.4",
    "accelerate>=1.3.0",
    "librosa",
    "soundfile",
    "jiwer>=4.0.0",
    "psutil",
    "pandas"
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"

[tool.ruff]
line-length = 100
target-version = "py312"
